# gte-wars

./: .gdbinit  .gitignore  CMakeLists.txt  README.md  TODO.md
cmake/: tools.cmake
objects/: bullet.mtl  extrudedCube.mtl  octahedron.mtl  ship.mtl
src/: controller.c  controller.h  enemy.c  enemy.h  entity.h  font.c  font.h  gpu.c  main.c  math.h  model.c  model.h  render.c  render.h  rng.c  rng.h  spawn.c  spawn.h  world.c  world.h
src/libc/: misc.c
src/ps1/: gpu.c  gpu.h  gte.c  gte.h  trig.c  trig.h
tools/: convert_obj.py  requirements.txt
